--- a/PRL/PRL.csproj
+++ b/PRL/PRL.csproj
@@ -12,4 +12,8 @@
     <Folder Include="Resources\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BUS\BUS.csproj" />
+  </ItemGroup>
+
 </Project>
